--- a/samples/BiliBiliTool/src/Hangfire.Dashboard.Extensions/Pages/PeriodicJobPage.cshtml
+++ b/samples/BiliBiliTool/src/Hangfire.Dashboard.Extensions/Pages/PeriodicJobPage.cshtml
@@ -30,9 +30,9 @@
                 @if (!IsReadOnly)
                 {
                     <button class="js-jobs-list-command btn btn-sm btn-primary"
-                        data-url="@Url.To("/recurring/trigger")"
-                        data-loading-text="@Strings.RecurringJobsPage_Triggering"
-                        disabled="disabled">
+                            data-url="@Url.To("/recurring/trigger")"
+                            data-loading-text="@Strings.RecurringJobsPage_Triggering"
+                            disabled="disabled">
                         <span class="glyphicon glyphicon-play-circle"></span>
                         @Strings.RecurringJobsPage_TriggerNow
                     </button>
@@ -41,10 +41,10 @@
                 @if (!IsReadOnly)
                 {
                     <button class="js-jobs-list-command btn btn-sm btn-default"
-                        data-url="@Url.To("/periodic/remove")"
-                        data-loading-text="@Strings.Common_Deleting"
-                        data-confirm="@Strings.Common_DeleteConfirm"
-                        disabled="disabled">
+                            data-url="@Url.To("/periodic/remove")"
+                            data-loading-text="@Strings.Common_Deleting"
+                            data-confirm="@Strings.Common_DeleteConfirm"
+                            disabled="disabled">
                         <span class="glyphicon glyphicon-remove"></span>
                         @Strings.Common_Delete
                     </button>
@@ -262,7 +262,7 @@
                                     @if (job.JobStateEnum == JobState.Running)
                                     {
                                         <button type="button" class="js-period-jobs-list-command btn btn-warning btn-xs"
-                                        data-url="@Url.To($"/RecurringJobManage/Stop?jobId={job.Id}")">
+                                                data-url="@Url.To($"/RecurringJobManage/Stop?jobId={job.Id}")">
                                             Stop
                                         </button>
                                         <button class="js-period-jobs-list-command btn btn-primary btn-xs">
@@ -273,7 +273,7 @@
                                     @if (job.JobStateEnum == JobState.Stoped)
                                     {
                                         <button class="js-period-jobs-list-command btn btn-success btn-xs"
-                                        data-url="@Url.To($"/RecurringJobManage/Start?jobId={job.Id}")">
+                                                data-url="@Url.To($"/RecurringJobManage/Start?jobId={job.Id}")">
                                             Start
                                         </button>
                                     }
@@ -286,9 +286,9 @@
                                         <pre class="stack-trace"><code>@Html.StackTrace(job.Error)</code></pre>
                                     </td>
                                 </tr>
-                                }
-                            </tr>
-                        }
+                            }
+                                </tr>
+                            }
                     </tbody>
                 </table>
             </div>
@@ -302,28 +302,5 @@
     </div>
 </div>
 
-@*导入Hangfire包中内嵌的js资源文件（localhost:port/hangfire/js0）*@
-<script src="js0"></script>
-
-<script>
-    $('.js-jobs-list').each(function () {
-        var container = this;
-
-        $(this).on('click', '.js-period-jobs-list-command', function (e) {
-            var $this = $(this);
-
-            $this.prop('disabled');
-            var loadingDelay = setTimeout(function () {
-                $this.button('loading');
-            }, 100);
-
-            $.post($this.data('url'), {}, function () {
-                clearTimeout(loadingDelay);
-                window.location.reload();
-            });
-
-            e.preventDefault();
-        });
-    })
-
-</script>
+<script src="@Url.To("/js0")"></script>
+<script src="@Url.To("/js-ext0")"></script>
